test/testdata/functions/missing_3_args_error.lox
fun add(a, b, c) {
    print a + b + c;
}

add(); // error: add() accepts 3 arguments but 0 were given
